--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,10 +30,12 @@
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
                     <a class="nav-item nav-link" id="home" href="/">Home</a>
+                    <a class="nav-item nav-link" id="createRecipe" href="/create-recipe">Create recipe</a>
                     <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                     {% else %}
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                    <a class="nav-item nav-link" id="signUP" href="/sign-up">Sign Up</a>
+                    <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+                    <a class="nav-item nav-link" id="productPage" href="/product-page">Sign Up</a>
                     {% endif %}
                 </div>
             </div>
