--- a/website/templates/create-recipe.html
+++ b/website/templates/create-recipe.html
@@ -26,14 +26,14 @@
     <h3 align="center">Add ingredients</h3>
     <div class="input-group">
         <select class="form-select" id="ingredient" aria-label="Select ingredient">
-          <option selected>Choose...</option>
-          <option value="One">One</option>
-          <option value="Two">Two</option>
-          <option value="Three">Three</option>
+            <option selected>Choose...</option>
+            {% for food in foods %}
+            <option value="{{food.name}}">{{food.name}}</option>
+            {% endfor %}
         </select>
         <input type="button" value="&plus;" class="btn btn-outline-secondary" id="add_ingredient"/>
     </div>
-    <ul id='ingredients_list'></ul>
+    <ul class="list-group list-group-flush" id='ingredients_list'></ul>
     <br/>
     <div align="center">
         <button type="submit" class="btn btn-primary">Add recipe</button>
