--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -39,9 +39,9 @@
                     <a class="nav-item nav-link" id="createRecipe" href="/create-recipe">Create recipe</a>
                     <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                     {% else %}
+                    <a class="nav-item nav-link" id="productPage" href="/product-page">Product page</a>
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
                     <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-                    <a class="nav-item nav-link" id="productPage" href="/product-page">Sign Up</a>
                     {% endif %}
                 </div>
             </div>
