Adding to recipe databases implemented

--- a/website/templates/create-recipe.html
+++ b/website/templates/create-recipe.html
@@ -17,16 +17,16 @@
         <label for="recipe-dietary-restrictions" class="form-label">Dietary restrictions</label>
         <div class="btn-group btn-group-toggle d-flex" data-toggle="buttons">
             <label class="btn btn-secondary" onclick="this.button('toggle')">
-                <input name="recipe-dietary-restrictions" id="none" autocomplete="off" type="radio" checked> None 
+                <input name="recipe-dietary-restrictions" value="none" autocomplete="off" type="radio" checked> None 
             </label>
             <label class="btn btn-secondary">
-                <input name="recipe-dietary-restrictions" id="vegan" autocomplete="off" type="radio"> Vegan 
+                <input name="recipe-dietary-restrictions" value="vegan" autocomplete="off" type="radio"> Vegan 
             </label> 
             <label class="btn btn-secondary">
-                <input name="recipe-dietary-restrictions" id="vegetarian" autocomplete="off" type="radio"> Vegetarian 
+                <input name="recipe-dietary-restrictions" value="vegetarian" autocomplete="off" type="radio"> Vegetarian 
             </label> 
             <label class="btn btn-secondary">
-                <input name="recipe-dietary-restrictions" id="pescatarian" autocomplete="off" type="radio"> Pescatarian 
+                <input name="recipe-dietary-restrictions" value="pescatarian" autocomplete="off" type="radio"> Pescatarian 
             </label>
         </div>
     </div>
