--- a/website/templates/my-recipes.html
+++ b/website/templates/my-recipes.html
@@ -26,13 +26,21 @@
         
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                            <h5 class="card-title">{{recipe.name}}</h5>
+                            <h4 class="card-title">{{recipe.name}}</h4>
                             <small class="text-muted">20 mins</small>
                         </div>
                         <p class="card-body">{{recipe.description}}</p>
                         <div class="btn-group">
-                            <button type="button" class="btn btn-lg btn-primary">View</button>
-                            <button type="button" class="btn btn-lg btn-outline-secondary">Edit</button>
+                          <form method="POST">
+                            <button type="submit" name="view-or-edit" value="view" class="btn btn-lg btn-primary">View</button>
+                            <input type="hidden" name="recipe-id" value="{{recipe.id}}">
+                            <input type="hidden" name="recipe-name" value="{{recipe.formatted_name}}">
+                          </form>
+                          <form method="POST">
+                            <button type="button" name="view-or-edit" value="edit" class="btn btn-outline-primary">Edit</button>
+                            <input type="hidden" name="recipe-id" value="{{recipe.id}}">
+                            <input type="hidden" name="recipe-name" value="{{recipe.formatted_name}}">
+                          </form>
                         </div>
                     </div>
                     </div>
