--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,11 +9,9 @@
             crossorigin="anonymous"
         />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link
-            rel="stylesheet"
-            href="styles/create-recipe.css"
-        />
         <title>{% block title %}Home{% endblock %}</title>
+        {% block inline_style %}
+        {% endblock%}
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
