--- a/website/templates/view-recipe.html
+++ b/website/templates/view-recipe.html
@@ -1,12 +1,140 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}
 
+{% block inline_style%}
+<style>
+  
+  .mt-100 {
+    margin-top: 200px;
+  }
+  .circular-progress {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    /* height: 150px !important; */
+    float: left;
+    line-height: 150px;
+    background: none;
+    margin: 20px;
+    box-shadow: none;
+    position: relative;
+  }
+  .circular-progress:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .circular-progress > span {
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+  }
+  .circular-progress .circular-progress-left {
+    left: 0;
+  }
+  .circular-progress .circular-progress-bar {
+    width: 100%;
+    height: 100%;
+    background: none;
+    border-width: 10px;
+    border-style: solid;
+    position: absolute;
+    top: 0;
+  }
+  .circular-progress .circular-progress-left .circular-progress-bar {
+    left: 100%;
+    border-top-right-radius: 80px;
+    border-bottom-right-radius: 80px;
+    border-left: 0;
+    -webkit-transform-origin: center left;
+    transform-origin: center left;
+  }
+  .circular-progress .circular-progress-right {
+    right: 0;
+  }
+  .circular-progress .circular-progress-right .circular-progress-bar {
+    left: -100%;
+    border-top-left-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-right: 0;
+    -webkit-transform-origin: center right;
+    transform-origin: center right;
+    animation: loading-1 0.4s ease-in forwards;
+  }
+  .circular-progress .circular-progress-value {
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    background: #fff;
+    font-size: 12px;
+    color: #000;
+    line-height: 135px;
+    text-align: center;
+    position: absolute;
+    bottom: 25%;
+    left: 5%;
+  }
+  .circular-progress.blue .circular-progress-bar {
+    border-color: #049dff;
+  }
+  .circular-progress.blue .circular-progress-left .circular-progress-bar {
+    animation: loading-2 1.5s cubic-bezier(0.175, 0.885, 0.0, 1) forwards 0.4s;
+  }
+  .circular-progress.yellow .circular-progress-bar {
+    border-color: #fdba04;
+  }
+  .circular-progress.yellow .circular-progress-right .circular-progress-bar {
+    animation: loading-3 1.8s linear forwards;
+  }
+  .circular-progress.yellow .circular-progress-left .circular-progress-bar {
+    animation: none;
+  }
+  @keyframes loading-1 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(180deg);
+      transform: rotate(180deg);
+    }
+  }
+  @keyframes loading-2 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(144deg);
+      transform: rotate(144deg);
+    }
+  }
+  @keyframes loading-3 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(90deg);
+      transform: rotate(90deg);
+    }
+  }
+</style>
+{% endblock%}
+
 {% block content %}
 <h1 align="center">{{recipe.name}}</h1>
 <h4 align="center">View recipe</h4>
 <br/>
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col-md-5">
             <h3>Ingredients list</h3>
             <table class="table table-striped" id="ingredients-table">
                 <thead>
@@ -22,10 +150,287 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <h3>Description</h3>
+            <p>{{recipe.description}}</p>
         </div>
         <div class="col">
             <h3>Nutritional breakdown</h3>
+            <div class="row"> <!-- 3 top macro nutrients -->
+                {% for macro in ['Calories', 'Fibre', 'Protein']%}
+                <div class="col">
+                    {{macro}}
+                    <div class="row d-flex justify-content-center ">
+                        <div class="col-md-6">
+                        <div class="circular-progress blue">
+                            <span class="circular-progress-left">
+                            <span class="circular-progress-bar"></span>
+                            </span>
+                            <span class="circular-progress-right">
+                            <span class="circular-progress-bar"></span>
+                            </span>
+                            <div class="circular-progress-value">50%</div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+
+                <!-- <div class="col">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                </div> -->
+            </div>
+
+            <div class="row small">
+                <div class="col">
+                    <div class="p-2 my-2 bg-light">
+                        <h5>Carbohydrates</h5>
+
+                    <div class="row">
+                        <div class="col-6">
+                            Carbohydrates
+                        </div>
+                        <div class="col-2">
+                            50 g
+                        </div>
+                        <div class="col">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                    {% for carb in ['Fibre', 'Sugar']%}
+                    <div class="row">
+                        <div class="col-1">
+                        </div>
+                        <div class="col-5">
+                            {{carb}}
+                        </div>
+                        <div class="col-2">
+                            12 g
+                        </div>
+                        <div class="col">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+
+                <div class="p-2 my-2 bg-light">
+                    <h5>Lipids</h5>
+                    <div class="row">
+                        <div class="col-6">
+                            Total fat
+                        </div>
+                        <div class="col-2">
+                            15 g
+                        </div>
+                        <div class="col">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1">
+                        </div>
+                        <div class="col-5">
+                            Mono
+                        </div>
+                        <div class="col-2">
+                            12 g
+                        </div>
+                        <div class="col">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1">
+                        </div>
+                        <div class="col-5">
+                            Poly
+                        </div>
+                        <div class="col-2">
+                            12 g
+                        </div>
+                        <div class="col">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                    {% for poly_fats in ['Omega-3','Omega-6']%}
+                    <div class="row">
+                        <div class="col-2">
+                        </div>
+                        <div class="col-4">
+                            {{poly_fats}}
+                        </div>
+                        <div class="col-2">
+                            2 g
+                        </div>
+                        <div class="col">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-5">
+                            Saturated
+                        </div>
+                        <div class="col-2">
+                            4 g
+                        </div>
+                        <div class="col-4">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-5">
+                            Cholesterol
+                        </div>
+                        <div class="col-2">
+                            4 g
+                        </div>
+                        <div class="col-4">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="p-2 my-2 bg-light">
+                    <h5>Protein</h5>
+                    <div class="row">
+                        <div class="col-6">
+                            Protein
+                        </div>
+                        <div class="col-2">
+                            X g
+                        </div>
+                        <div class="col">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="p-2 my-2 bg-light">
+                    <h5>Essential amino acids</h5>
+                    {% for amino in ['Phenylalanine', 'Valine', 'Threonine', 'Tryptophan', 'Methionine', 'Leucine', 
+                                    'Isoleucine', 'Lysine', 'Histidine']%}
+                    <div class="row">
+                        <div class="col-6">
+                            {{amino}}
+                        </div>
+                        <div class="col-2">
+                            X g
+                        </div>
+                        <div class="col">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+
+                <div class="p-2 my-2 bg-light">
+                    <h5>Phytochemicals</h5>
+                    {% for phytochemical in ['Lypocene', 'Lutein and zeaxanthin', 'Quarcetin', 'Flavonoids', 'Resveratrol', 'Myricetin']%}
+                    <div class="row">
+                        <div class="col-6">
+                            {{phytochemical}}
+                        </div>
+                        <div class="col-2">
+                            X g
+                        </div>
+                        <div class="col">
+                            <div class="progress position-relative" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+
+            </div>
+                <div class="col">
+                    <div class="p-2 my-2 bg-light">
+                        <h5>Vitamins</h5>
+                        {% for b_vitamin in ['B1', 'B2', 'B3', 'B5', 'B6', 'B12', 'Choline', 'Folate', 'Pantothenate', 
+                                            'Vitamin A', 'Vitamin C', 'Vitamin D', 'Vitamin E', 'Vitamin K']%}
+                        <div class="row">
+                            <div class="col-6">
+                                {{b_vitamin}}
+                            </div>
+                            <div class="col-2">
+                                X g
+                            </div>
+                            <div class="col">
+                                <div class="progress position-relative" style="height: 20px;">
+                                    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+
+                    <div class="p-2 my-2 bg-light">
+                        <h5>Minerals</h5>
+                        {% for mineral in ['Calcium', 'Chloride', 'Chromium', 'Copper', 'Fluoride', 'Iodine', 'Iron', 'Magnesium', 
+                                            'Manganese', 'Molybdenum', 'Phosphorus', 'Potassium', 'Selenium', 'Sodium', 'Zinc' ]%}
+                        <div class="row">
+                            <div class="col-6">
+                                {{mineral}}
+                            </div>
+                            <div class="col-2">
+                                X g
+                            </div>
+                            <div class="col">
+                                <div class="progress position-relative" style="height: 20px;">
+                                    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <small class="justify-content-center d-flex position-absolute w-100">20%</small>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    
+
+                </div>
+            </div>
         </div>
-      </div>
+    </div>
 </div>
 {% endblock %}
