improved circle progress bars

--- a/website/templates/circular-progress-bar/src/index.html
+++ b/website/templates/circular-progress-bar/src/index.html
@@ -359,7 +359,7 @@ data-pie='{
     </div>
     <div class="code">
       <pre>
-            <code class="language-js">&#x3C;script&#x3E;
+            <code class="language-js"><script>
   setInterval(() => {
     const typeFont = [100, 200, 300, 400, 500, 600, 700];
     const colorHex = `#${Math.floor((Math.random() * 0xffffff) << 0).toString(16)}`;
@@ -373,7 +373,7 @@ data-pie='{
     }
     circle.animationTo(options);
   }, 3000);
-&#x3C;/script&#x3E;
+</script>
 </code>
           </pre>
     </div>
