--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,8 +8,15 @@
             href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
             crossorigin="anonymous"
         />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link 
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+            rel="stylesheet" 
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+            crossorigin="anonymous"
+        
+            />
         <title>{% block title %}Home{% endblock %}</title>
+
         {% block inline_style %}
         {% endblock%}
     </head>
@@ -91,5 +98,8 @@
             type="text/javascript"
             src="{{ url_for('static', filename='create-recipe.js')}}"
         ></script>
+
+        {% block scripts %}
+        {% endblock %}
     </body>
 </html>
