--- a/website/templates/view-recipe.html
+++ b/website/templates/view-recipe.html
@@ -1,131 +1,7 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}
 
 {% block inline_style%}
-<style>
-  
-  .mt-100 {
-    margin-top: 200px;
-  }
-  .circular-progress {
-    width: 100%;
-    aspect-ratio: 1 / 1;
-    /* height: 150px !important; */
-    float: left;
-    line-height: 150px;
-    background: none;
-    margin: 20px;
-    box-shadow: none;
-    position: relative;
-  }
-  .circular-progress:after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    border: 6px solid #fff;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  .circular-progress > span {
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    z-index: 1;
-  }
-  .circular-progress .circular-progress-left {
-    left: 0;
-  }
-  .circular-progress .circular-progress-bar {
-    width: 100%;
-    height: 100%;
-    background: none;
-    border-width: 10px;
-    border-style: solid;
-    position: absolute;
-    top: 0;
-  }
-  .circular-progress .circular-progress-left .circular-progress-bar {
-    left: 100%;
-    border-top-right-radius: 80px;
-    border-bottom-right-radius: 80px;
-    border-left: 0;
-    -webkit-transform-origin: center left;
-    transform-origin: center left;
-  }
-  .circular-progress .circular-progress-right {
-    right: 0;
-  }
-  .circular-progress .circular-progress-right .circular-progress-bar {
-    left: -100%;
-    border-top-left-radius: 80px;
-    border-bottom-left-radius: 80px;
-    border-right: 0;
-    -webkit-transform-origin: center right;
-    transform-origin: center right;
-    animation: loading-1 0.4s ease-in forwards;
-  }
-  .circular-progress .circular-progress-value {
-    width: 90%;
-    height: 90%;
-    border-radius: 50%;
-    background: #fff;
-    font-size: 12px;
-    color: #000;
-    line-height: 135px;
-    text-align: center;
-    position: absolute;
-    bottom: 25%;
-    left: 5%;
-  }
-  .circular-progress.blue .circular-progress-bar {
-    border-color: #049dff;
-  }
-  .circular-progress.blue .circular-progress-left .circular-progress-bar {
-    animation: loading-2 1.5s cubic-bezier(0.175, 0.885, 0.0, 1) forwards 0.4s;
-  }
-  .circular-progress.yellow .circular-progress-bar {
-    border-color: #fdba04;
-  }
-  .circular-progress.yellow .circular-progress-right .circular-progress-bar {
-    animation: loading-3 1.8s linear forwards;
-  }
-  .circular-progress.yellow .circular-progress-left .circular-progress-bar {
-    animation: none;
-  }
-  @keyframes loading-1 {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(180deg);
-      transform: rotate(180deg);
-    }
-  }
-  @keyframes loading-2 {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(144deg);
-      transform: rotate(144deg);
-    }
-  }
-  @keyframes loading-3 {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(90deg);
-      transform: rotate(90deg);
-    }
-  }
-</style>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/styles/github.min.css'>
 {% endblock%}
 
 {% block content %}
@@ -156,21 +32,28 @@
         <div class="col">
             <h3>Nutritional breakdown</h3>
             <div class="row"> <!-- 3 top macro nutrients -->
-                {% for macro in ['Calories', 'Fibre', 'Protein']%}
-                <div class="col">
-                    {{macro}}
-                    <div class="row d-flex justify-content-center ">
-                        <div class="col-md-6">
-                        <div class="circular-progress blue">
-                            <span class="circular-progress-left">
-                            <span class="circular-progress-bar"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                            <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">50%</div>
+                <div class="col justify-content-center d-flex">
+                    <div class="my-4 position-relative">
+                        <div class="justify-content-center d-flex position-absolute w-100" style="display: flex; justify-content: center;  align-items: center;">
+                            <h5 class="fw-bold" style="line-height: 4em">Calories</h5>
+                            <h5 class="fw-bold" style="line-height: 4em"></h5>
                         </div>
+                        <div class="container position-relative" style="display: flex; justify-content: center;">
+                            {% set macro_sum = namespace(value=16) %}
+                            {% for macro_mini in [[36, 'red'], [108, 'blue'], [216, 'green']]%}
+                            <div class="pie position-absolute" data-pie='{"number": false, "animationSmooth": "1s ease-out", "percent": "{{(macro_mini[0] - 16) / 3.6 }}", "textPosition": "20%", "fontWeight":"bold", "size":"120", "rotation": "{{macro_sum.value}}", "colorSlice":"{{macro_mini[1]}}", "colorCircle":"#FFFFFF00", "round":"true"}'></div>
+                            {% set macro_sum.value = macro_sum.value + macro_mini[0]%}
+                            {% endfor%}
                         </div>
+                    </div>
+                </div>
+                {% for macro in ['Fibre', 'Protein']%}
+                <div class="col justify-content-center d-flex">
+                    <div class="my-4 position-relative">
+                        <div class="justify-content-center d-flex position-absolute w-100" style="display: flex; justify-content: center;">
+                            <h5 class="fw-bold" style="line-height: 4em">{{macro}}</h5>
+                        </div>
+                        <div class="pie" data-pie='{ "percent": 66, "textPosition": "20%", "fontWeight":"bold", "size":"120", "rotation": "0", "inverse": "true", "colorSlice":"#ffcf00", "round":"true", "strokeBottom": 5, "colorCircle":"#f8f9fa" }'></div>
                     </div>
                 </div>
                 {% endfor %}
@@ -426,11 +309,20 @@
                         </div>
                         {% endfor %}
                     </div>
-                    
-
                 </div>
             </div>
         </div>
     </div>
 </div>
+<div class="flex progress-wrapper">
+    <div class="progress">progress</div>
+    <input type="range" value="75" min="0" max="100" step="1">
+  </div>
+  <div class="flex container">
+{% endblock %}
+
+{% block scripts %}
+<script src='https://cdn.jsdelivr.net/gh/tomik23/circular-progress-bar@latest/docs/circularProgressBar.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js'></script>
+<script src="{{ url_for('static', filename='circle-progress-bar.js')}}"></script>
 {% endblock %}
