--- a/website/templates/create-recipe.html
+++ b/website/templates/create-recipe.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %}
+{% extends "base.html" %} {% block title %}Create Recipe - NutriMetrics{% endblock %}
 
 {% block content %}
 <h1 align="center">Create a recipe</h1>
@@ -48,4 +48,8 @@
         <button type="submit" class="btn btn-primary">Add recipe</button>
     </div>
 </form>
+<script
+    type="text/javascript"
+    src="{{ url_for('static', filename='create-recipe.js')}}"
+></script>
 {% endblock %}
