--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -50,16 +50,16 @@
         {% if messages %}
             {% for category, message in messages %}
             {% if category == 'error' %}
-            <div class="alert alert-danger alert-dismissable fade show" role="alert">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert">
+            <div class="alert alert-danger alert-dismissable fade show d-flex justify-content-between" role="alert">
+                <span class="my-auto">{{ message }}</span>
+                <button class="btn my-auto mx-1" data-bs-dismiss="alert">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             {% else %}
-            <div class="alert alert-success alert-dismissable fade show" role="alert">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert">
+            <div class="alert alert-success alert-dismissable fade show d-flex justify-content-between" role="alert">
+                <span class="my-auto">{{ message }}</span>
+                <button class="btn my-auto mx-1" data-bs-dismiss="alert">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -93,10 +93,6 @@
         <script
             type="text/javascript"
             src="{{ url_for('static', filename='index.js')}}"
-        ></script>
-        <script
-            type="text/javascript"
-            src="{{ url_for('static', filename='create-recipe.js')}}"
         ></script>
 
         {% block scripts %}
